<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Gov</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login">My Gov</string>
    <string name="Register">Don\'t have an account? Register here.</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="IncorrectAccount">Email or Password Incorrect</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Username">Username</string>
    <string name="SignUpAs">Sign Up As</string>
    <string name="WelcomeMessage">Welcome\n\t\t\t\t\t\t\tto\n\tMy Gov</string>
    <string name="GovOfficial">Government Official</string>
    <string name="Constituent">Constituent</string>
    <string name="Emailused">Email Already In Use</string>

</resources>
