<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/suusernameView"
            android:text="@string/Username" android:textSize="30sp"
            android:layout_below="@+id/invalidAccountView" android:layout_alignLeft="@+id/suEmailView"
            android:layout_alignStart="@+id/suEmailView" android:layout_marginTop="40dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/suUsername"
            android:layout_below="@+id/suusernameView" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:id="@+id/suEmailView"
            android:textSize="30sp" android:layout_below="@+id/suUsername" android:layout_alignLeft="@+id/suEmail"
            android:layout_alignStart="@+id/suEmail"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/suEmail"
            android:layout_below="@+id/suEmailView" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirstName"
            android:id="@+id/suFNameView"
            android:textIsSelectable="false" android:textSize="30sp" android:layout_below="@+id/suEmail"
            android:layout_alignLeft="@+id/suLNameView" android:layout_alignStart="@+id/suLNameView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/suFName"
            android:layout_below="@+id/suFNameView" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LastName"
            android:id="@+id/suLNameView"
            android:textSize="30sp" android:layout_below="@+id/suFName" android:layout_alignLeft="@+id/suPasswordView"
            android:layout_alignStart="@+id/suPasswordView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/suLName"
            android:layout_below="@+id/suLNameView" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:id="@+id/suPasswordView"
            android:textSize="30sp" android:layout_below="@+id/suLName" android:layout_alignLeft="@+id/suPassword"
            android:layout_alignStart="@+id/suPassword"/>

     <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerBar"
            android:layout_below="@+id/toggleText"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Emailused"
            android:id="@+id/invalidAccountView"
            android:textSize="15sp"
            android:textColor="#f05840"
            android:layout_marginTop="70dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/suusernameView"
            android:layout_alignStart="@+id/suusernameView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/suPassword"
            android:layout_below="@+id/suPasswordView"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap the button to toggle between Constituent and Official"
            android:id="@+id/toggleText"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="#f05840"
            android:layout_below="@+id/suPassword"
            android:layout_centerHorizontal="true"/>

    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/constituentToggle"
            android:background="@drawable/toggle_button_color_selector"
            android:textOn=" Gov Official "
            android:textOff=" Constituent "
            android:layout_marginTop="10dp"
            android:layout_below="@+id/registerBar"
            android:layout_alignRight="@+id/suLNameView"
            android:layout_alignEnd="@+id/suLNameView"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>